# pulse

./: .gitignore  CHANGELOG.md  CLAUDE.md  CUsersThienAppDataLocalTempclaudeC--Users-Thien-Projects-pulse--claude-worktrees-pulse-feature-brainstorm-5d250700b8637a-447c-4e88-b6fa-15c67018e06fscratchpadpr75.diff  CUsersThienAppDataLocalTempclaudeC--Users-Thien-Projects-pulse271e04c7-8e43-4c5e-a134-b9c20a343008scratchpadpr14.diff  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
docs/: presence-signal-matrix.md  smtc-support-matrix.md
docs/specs/: 2026-07-21-edge-snap-no-corner-magnet.md  2026-07-23-track-change-transitions.md
spikes/: README.md
spikes/presence-spike/: Cargo.toml
spikes/presence-spike/src/: main.rs
spikes/smtc-spike/: Cargo.toml
spikes/smtc-spike/src/: main.rs
spikes/web-surface/: Cargo.toml
spikes/web-surface/src/: main.rs
src/: App.tsx  ArtGlow.tsx  DeviceTag.tsx  ErrorBoundary.tsx  Focus.tsx  Heart.tsx  IntroBubble.tsx  Keycaps.tsx  LyricsPanel.tsx  Palette.tsx  Prefs.tsx  Queue.tsx  Search.tsx  SpotifyConnectButton.tsx  Transport.tsx  Visualizer.tsx  Waveform.tsx  WidgetMenu.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  dock.rs  focus.rs  history.rs  lastfm.rs  lib.rs  loopback.rs  lyrics.rs  media.rs  palette.rs  prefs.rs  presence.rs  search.rs  settings.rs  similar.rs  spotify.rs  upnext.rs
src/icons/: IconLab.tsx  geometry.ts  useBracketPulse.ts  useSkipFlick.ts
src/lib/: artAccent.ts  backend.ts  chords.ts  lrc.ts  palette.ts  posClock.test.ts  posClock.ts  reactive.ts  sizes.ts  tokens.ts  trackDir.ts
