[package]
name = "pulse"
version = "0.1.0"
description = "Pulse — mini music player widget for Windows"
authors = ["Thien Tran"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
ureq = { version = "2", features = ["json"] }
cpal = "0.16"
rustfft = "6"
windows = { version = "0.61", features = [
    "Media_Control",
    "Foundation",
    "Foundation_Collections",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }
