[package]
name = "pulse"
version = "0.5.1"
description = "Pulse — mini music player widget for Windows"
authors = ["Thien Tran"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
ureq = { version = "2", features = ["json"] }
cpal = "0.16"
rustfft = "6"
windows = { version = "0.61", features = [
    "Media_Control",
    "Foundation",
    "Foundation_Collections",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Media",
    # presence.rs (P0): fullscreen/idle sensing
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_Graphics_Gdi",
] }

# Full debuginfo is most of what makes `tauri dev` builds crawl (codegen +
# MSVC link time). We never attach a debugger to this app; line tables keep
# panic backtraces readable and cut the build noticeably. Release profile
# untouched. NOTE: changing this invalidates the dev cache once — the first
# build after pulling it is a full rebuild.
[profile.dev]
debug = "line-tables-only"
