[package]
name = "pulse"
version = "0.7.1"
description = "Palette — mini music player widget for Windows"
authors = ["Thien Tran"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
# Release logging: main.rs sets windows_subsystem="windows" (no console), so
# stderr is discarded — panics and eprintln! diagnostics vanish. Route them to
# a rotating file in the app log dir instead so a user who hits a crash or a
# failed token refresh has something to send.
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
ureq = { version = "2", features = ["json"] }
# spotify.rs PKCE: code_verifier entropy + S256 challenge
rand = "0.8"
sha2 = "0.10"
cpal = "0.16"
rustfft = "6"
windows = { version = "0.61", features = [
    "Media_Control",
    "Foundation",
    "Foundation_Collections",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Media",
    # presence.rs (P0): fullscreen/idle sensing
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    # search.rs: DWMWA_TRANSITIONS_FORCEDISABLED (DWM fades layered windows
    # on hide() — the search window must vanish instantly)
    "Win32_Graphics_Dwm",
    # loopback.rs: process-scoped WASAPI loopback (session enumeration +
    # ActivateAudioInterfaceAsync; Appx for the packaged-app AUMID↔PID join)
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_Storage_Packaging_Appx",
    "Win32_Security",
] }
# loopback.rs's #[implement] completion handler expands to ::windows_core
# paths — the macro requires the crate present under this exact name.
windows-core = "0.61"

# Full debuginfo is most of what makes `tauri dev` builds crawl (codegen +
# MSVC link time). We never attach a debugger to this app; line tables keep
# panic backtraces readable and cut the build noticeably. Release profile
# untouched. NOTE: changing this invalidates the dev cache once — the first
# build after pulling it is a full rebuild.
[profile.dev]
debug = "line-tables-only"
