[package]
name = "presence-spike"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_Graphics_Gdi",
] }

[workspace]
